fix: wrapping link around button

--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -13,7 +13,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: inherit;
+    background: #e5e5e5;
 }
 
 /* Handle */
